CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c.object
<CustomObject>
    <description>Cases for Homeless clients</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Homeless</relationshipLabel>
        <relationshipName>T_SBSD_CASE7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_IS_HOMELESS__c</fullName>
        <label>Is the family homeless?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_LVG_CAMPGROUND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Living in campground</description>
        <label>Living in campground</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_LVG_HOTEL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Living in hotel or motel</description>
        <label>Living in hotel or motel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_LVG_OTHER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have a temporary living situation (please explain)</description>
        <label>Have a temporary living situation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_LVG_SHELTER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Living in shelter</description>
        <label>Living in shelter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_LVG_SUBSTANDARD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Living in substandard housing such as car, park, etc.</description>
        <label>Living in substandard housing, like car?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bypassValidations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <description>To be able to update end date from backend. CCCAP-12639</description>
        <label>bypassValidation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_family_homeless__c</fullName>
        <description>New field to accommodate "Unknown" as part of CCCAP-12639</description>
        <label>Is the family homeless?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TXT_CMT__c</fullName>
        <description>Describe temporary living situation</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Describe temporary living situation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Homeless</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Homeless ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Homeless</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Eff_Begin_Date_Read_Only_if_entered</fullName>
        <active>true</active>
        <description>Cannot update Effective  Begin date  once entered</description>
        <errorConditionFormula>AND(ISCHANGED(DTE_BEGIN_EFFV__c),!ISBLANK(PRIORVALUE(DTE_BEGIN_EFFV__c)))</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Cannot update Effective  Begin date  once entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Eff_Date_Uneditable_on_Homeless_flag_upd</fullName>
        <active>true</active>
        <description>Effective End Date cannot be Edited if Is Family Homeless changed from No to Yes</description>
        <errorConditionFormula>!IDN_CASE__r.Is_Peak_Data__c &amp;&amp; !IDN_CASE__r.Is_CBMS_Data__c &amp;&amp; OR(AND(ISCHANGED(Is_family_homeless__c),ISBLANK(TEXT(PRIORVALUE(Is_family_homeless__c))),ISPICKVAL(Is_family_homeless__c,&apos;Y&apos;),ISCHANGED(DTE_END_EFFV__c)),
AND( ISNEW(),ISPICKVAL(Is_family_homeless__c,&apos;Y&apos;),NOT(ISNULL( DTE_END_EFFV__c ))))</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be Edited if Is Family Homeless is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_Begin_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <description>Effective Begin date cannot be a future date</description>
        <errorConditionFormula>!IDN_CASE__r.Is_Peak_Data__c  &amp;&amp; !IDN_CASE__r.Is_CBMS_Data__c &amp;&amp; DTE_BEGIN_EFFV__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Effective Begin date cannot be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_End_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <description>Effective End date cannot be a future date</description>
        <errorConditionFormula>!IDN_CASE__r.Is_Peak_Data__c &amp;&amp; !IDN_CASE__r.Is_CBMS_Data__c &amp;&amp; DTE_END_EFFV__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End date cannot be a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_End_Date_greater_than_Begin</fullName>
        <active>true</active>
        <description>Effective End Date cannot be prior to Effective Start Date</description>
        <errorConditionFormula>!IDN_CASE__r.Is_Peak_Data__c &amp;&amp; !IDN_CASE__r.Is_CBMS_Data__c &amp;&amp; DTE_END_EFFV__c &lt; DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be prior to Effective Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Read_Only_if_Eff_End_Dt_not_null</fullName>
        <active>true</active>
        <description>Cannot update Record as Effective End Date is Not Null.</description>
        <errorConditionFormula>AND(!IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c, NOT(ISCHANGED(bypassValidations__c)), !ISBLANK(PRIORVALUE(DTE_END_EFFV__c)),OR(ISCHANGED(IDN_CASE__c),ISCHANGED(TXT_CMT__c),ISCHANGED(DTE_BEGIN_EFFV__c) ,ISCHANGED(DTE_END_EFFV__c) , ISCHANGED(IND_LVG_OTHER__c),ISCHANGED(Is_family_homeless__c) ,ISCHANGED(IND_LVG_CAMPGROUND__c),ISCHANGED(IND_LVG_HOTEL__c),ISCHANGED(IND_LVG_SHELTER__c),ISCHANGED(IND_LVG_SUBSTANDARD__c)))</errorConditionFormula>
        <errorMessage>Cannot update Record as Effective End Date is Not Null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Desc_temporary_living_situation</fullName>
        <active>true</active>
        <description>Please describe temporary living situation</description>
        <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c, IND_LVG_OTHER__c , ISBLANK(TXT_CMT__c),NOT(ISCHANGED(bypassValidations__c)) )</errorConditionFormula>
        <errorDisplayField>TXT_CMT__c</errorDisplayField>
        <errorMessage>Please describe temporary living situation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Effective_Begin_Date</fullName>
        <active>true</active>
        <description>Please provide Effective Begin Date.</description>
        <errorConditionFormula>AND(!IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c,NOT(ISCHANGED(bypassValidations__c)),ISBLANK(DTE_BEGIN_EFFV__c))</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
        <errorMessage>Please provide Effective Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_End_Date_for_Homeless_change</fullName>
        <active>true</active>
        <description>Effective End Date is required if Is the family homeless is changed from Yes to No</description>
        <errorConditionFormula>AND(!IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c, ISBLANK(DTE_END_EFFV__c), ISCHANGED(Is_family_homeless__c) , ISPICKVAL(Is_family_homeless__c,&apos;N&apos;),ISPICKVAL(PRIORVALUE(Is_family_homeless__c),&apos;Y&apos;))</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date is required if Is the family homeless is changed from Yes to No</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Is_the_family_homeless</fullName>
        <active>true</active>
        <description>At least one Homeless Living Situation must be checked.</description>
        <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c,NOT(ISCHANGED(bypassValidations__c)), ISPICKVAL(Is_family_homeless__c,&apos;Y&apos;) , NOT(OR(IND_LVG_CAMPGROUND__c,IND_LVG_HOTEL__c, IND_LVG_OTHER__c, IND_LVG_SHELTER__c, IND_LVG_SUBSTANDARD__c)) )</errorConditionFormula>
        <errorDisplayField>IND_LVG_OTHER__c</errorDisplayField>
        <errorMessage>At least one Homeless Living Situation must be checked.</errorMessage>
    </validationRules>
</CustomObject>