CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c/validationRules/Eff_Begin_Date_Read_Only_if_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Eff_Begin_Date_Read_Only_if_entered</fullName>
    <active>true</active>
    <description>Cannot update Effective  Begin date  once entered</description>
    <errorConditionFormula>AND(ISCHANGED(DTE_BEGIN_EFFV__c),!ISBLANK(PRIORVALUE(DTE_BEGIN_EFFV__c)))</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Cannot update Effective  Begin date  once entered</errorMessage>
</ValidationRule>