CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c/validationRules/Effective_End_Cannot_be_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Cannot_be_Future_Date</fullName>
    <active>true</active>
    <description>Effective End date cannot be a future date</description>
    <errorConditionFormula>!IDN_CASE__r.Is_Peak_Data__c &amp;&amp; !IDN_CASE__r.Is_CBMS_Data__c &amp;&amp; DTE_END_EFFV__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End date cannot be a future date</errorMessage>
</ValidationRule>