CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c/validationRules/Effective_End_Date_greater_than_Begin.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Date_greater_than_Begin</fullName>
    <active>true</active>
    <description>Effective End Date cannot be prior to Effective Start Date</description>
    <errorConditionFormula>!IDN_CASE__r.Is_Peak_Data__c &amp;&amp; !IDN_CASE__r.Is_CBMS_Data__c &amp;&amp; DTE_END_EFFV__c &lt; DTE_BEGIN_EFFV__c</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date cannot be prior to Effective Start Date</errorMessage>
</ValidationRule>