CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c/validationRules/Require_Desc_temporary_living_situation.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Desc_temporary_living_situation</fullName>
    <active>true</active>
    <description>Please describe temporary living situation</description>
    <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c, IND_LVG_OTHER__c , ISBLANK(TXT_CMT__c),NOT(ISCHANGED(bypassValidations__c)) )</errorConditionFormula>
    <errorDisplayField>TXT_CMT__c</errorDisplayField>
    <errorMessage>Please describe temporary living situation</errorMessage>
</ValidationRule>