CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c/validationRules/Require_Effective_Begin_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Effective_Begin_Date</fullName>
    <active>true</active>
    <description>Please provide Effective Begin Date.</description>
    <errorConditionFormula>AND(!IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c,NOT(ISCHANGED(bypassValidations__c)),ISBLANK(DTE_BEGIN_EFFV__c))</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    <errorMessage>Please provide Effective Begin Date.</errorMessage>
</ValidationRule>