CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_HOMELESS__c/validationRules/Require_Is_the_family_homeless.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Is_the_family_homeless</fullName>
    <active>true</active>
    <description>At least one Homeless Living Situation must be checked.</description>
    <errorConditionFormula>AND( !IDN_CASE__r.Is_Peak_Data__c, !IDN_CASE__r.Is_CBMS_Data__c,NOT(ISCHANGED(bypassValidations__c)), ISPICKVAL(Is_family_homeless__c,&apos;Y&apos;) , NOT(OR(IND_LVG_CAMPGROUND__c,IND_LVG_HOTEL__c, IND_LVG_OTHER__c, IND_LVG_SHELTER__c, IND_LVG_SUBSTANDARD__c)) )</errorConditionFormula>
    <errorDisplayField>IND_LVG_OTHER__c</errorDisplayField>
    <errorMessage>At least one Homeless Living Situation must be checked.</errorMessage>
</ValidationRule>